--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,7 @@
+<div class='flash_massage'>
+  <%= flash[:notice] %>
+</div>
+
 <h1>Books</h1>
 
 <table>
@@ -22,7 +26,18 @@
 </table>
 
 <h2>New Book</h2>
-<%= form_with model: Book.new do |f| %>
+
+<% if @book.errors.any? %>
+  <%= @book.errors.count %> errors prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
+<%= form_with model: @book, url: '/books', method: :post do |f| %>
+<!-- form_with model: Book.new do |f| -->
   <h4>Title</h4>
   <%= f.text_field :title %>
 
