[Finish]初回提出用

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -17,7 +17,11 @@
         <td><%=book.body%></td>
         <td>
           <span><%= link_to 'Show', "/books/#{book.id}" %></span>
+        </td>
+        <td>
           <span><%= link_to 'Edit', "/books/#{book.id}/edit"%></span>
+        </td>
+        <td>
           <span><%= link_to 'Destroy', "/books/#{book.id}", method: :delete, "data-confirm"=>"Are you sure?"%></span>
         </td>
       </tr>
@@ -25,25 +29,33 @@
   </tbody>
 </table>
 
-<h2>New Book</h2>
+<din class='new_book'>
+  <h2>New Book</h2>
 
-<% if @book.errors.any? %>
-  <%= @book.errors.count %> errors prohibited this book from being saved:
-  <ul>
-    <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
+  <% if @book.errors.any? %>
+    <%= @book.errors.count %> errors prohibited this book from being saved:
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  <% end %>
 
-<%= form_with model: @book, url: '/books', method: :post do |f| %>
-<!-- form_with model: Book.new do |f| -->
-  <h4>Title</h4>
-  <%= f.text_field :title %>
+  <%= form_with model: @book, url: '/books', method: :post do |f| %>
+  <!-- form_with model: Book.new do |f| -->
+    <div class=form_title>
+      <h3>Title</h3>
+      <%= f.text_field :title %>
+    </div>
 
-  <h4>Body</h4>
-  <%= f.text_area :body %>
+    <div class=form_body>
+      <h3>Body</h3>
+      <%= f.text_area :body %>
+    </div>
 
-  <%= f.submit 'Create Book' %>
+    <div class=form_input>
+      <%= f.submit 'Create Book' %>
+    </div>
 
-<% end %>
+  <% end %>
+</div>
