--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,42 @@
  *= require_tree .
  *= require_self
  */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body{
+  font-family: arial, sans-serif;
+  padding: 10px;
+}
+
+p{
+  font-size: 13px;
+}
+
+form{
+  display: block;
+}
+
+.content{
+  margin: 10px;
+}
+
+.foot_link{
+  margin: 20px 0;
+  font-size: 10px;
+}
+
+td{
+  padding: 5px;
+}
+
+h1, h2{
+  margin: 10px 0;
+}
+
+h3{
+  margin: 5px 0;
+}
