--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Book</h1>
 <% if @book.errors.any? %>
-  <%= @book.errors.count %>件のエラーが発生しました
+  <%= @book.errors.count %> errors prohibited this book from being saved:
   <ul>
     <% @book.errors.full_messages.each do |message| %>
       <li><%= message %></li>
@@ -9,16 +9,25 @@
 <% end %>
 
 <%= form_with model: @book do |f| %>
-  <h4>Title</h4>
-  <%= f.text_field :title %>
+  <div class=form_title>
+    <h3>Title</h3>
+    <%= f.text_field :title %>
+  </div>
 
-  <h4>Body</h4>
-  <%= f.text_area :body %>
+  <div class=form_body>
+    <h3>Body</h3>
+    <%= f.text_area :body %>
+  </div>
 
-  <%= f.submit 'Update Book' %>
+  <div class=form_input>
+    <%= f.submit 'Update Book' %>
+  </div>
 
 <% end %>
 
-<span><%= link_to 'Show', "/books/#{@book.id}"%></span>
-|
-<span><%= link_to 'Back', "/books" %></span>
+
+<div class='foot_link'>
+  <span><%= link_to 'Show', "/books/#{@book.id}"%></span>
+  |
+  <span><%= link_to 'Back', "/books" %></span>
+</div>
